Amélioration gestion des secrets